1999-01-27  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* Makefile.am (EXTRA_DIST): sst was added within contrib

	* ltmain.sh, ltconfig, libtool.m4i: updated from libtool CVS
	* configure.in: AC_SUBST LIBTOOL_DEPS
	* Makefile.am: regen libtool if neded

	* Makefile.am: declare that we want automake 1.4 and we're a foreign 
	package

	* configure.in: require autoconf 2.13, and use
	AC_VALIDATE_CACHED_SYSTEM_TUPLE instead of
	AC_VALIDATE_CACHE_SYSTEM_TYPE
	* config/acinclude.m4i: removed AC_VALIDATE_CACHE_SYSTEM_TYPE

	* configure.in (SAMBA_CLIENT): updated check for smbclient to
	support Samba 2.0.0

1999-01-26  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* server-src/amdump.sh.in (runuser): set to LOGNAME if defined, and
	to the output of whoami otherwise
	Reported by Tom Schutter <tom@platte.com>

1999-01-26	Thomas Hepper <th@ant.han.de>	
	* Makefile.am Added sst driver files to EXTAR_DIST

1999-01-26	Thomas Hepper <th@ant.han.de>	
	* changer-src/chg-scsi.c If statfile is not set try to get the info
	about the current loaded tape direct from the changer.
	Fixed debug output for the eject value if > 1
	* changer-src/libscsi.h Prototype for GetCurrentSlot
	* changer-src/scsi-aix.c If the Device we open is not a changer or tape
	return NULL, so that the above function can abort. New eject per mtio ioctl.
	* changer-src/scsi-bsd.c see scsi-aix.c
	* changer-src/scsi-linux.c see scsi-aix.c
	* changer-src/scsi-hpux_new.c see scsi-aix.c
	* changer-src/scsi-irix.c see scsi-aix.c
	* changer-src/scsi-solaris.c see scsi-aix.c and added a retry loop for
	the execution of SCSI commands.
	* changer-src/scsi-changer-driver.c New Function SCSI_ReadElementStatus
	split ReadElementStatus in device and device independed part
	New EXB120ElementStatus, renamed ReadElementStatus in GenericElementStatus
	added EXB 120 and DLT7000 to the devices list.
	Removed the linked list for the element status. Now every element
	type has its own array allocated in the *ElementStatus functions.